# rust-rectangle-dividing

./: .gitignore  .gitignore.in  .octocov.yml  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  update-package-json.sh
.github/workflows/: cratesio-publish.yml  gitignore-in.yml  happy.yml  octocov.yml  security.yml  test.yml  wasm-npm-publish.yml
src/: area.rs  aspect_ratio.rs  axis.rs  axis_aligned_rectangle.rs  component.rs  direction.rs  dividing.rs  lib.rs  point.rs  rectangle.rs  rotate.rs  vector.rs  wasm_binding.rs  weight.rs
src/point/: lib.rs
