[package]
name = "rust-rectangle-dividing"
version = "0.1.4"
edition = "2024"
description = "A rectangle dividing algorithm written in Rust"
repository = "https://github.com/kitsuyui/rust-rectangle-dividing/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-traits = "0.2"
serde = { version = "1.0.192", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
wasm-pack = "0.14.0"
